--- a/static/css/result.css
+++ b/static/css/result.css
@@ -38,7 +38,7 @@ p {
 
 .results {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     gap: 30px;
     margin-top: 25px;
     margin-bottom: 40px;
@@ -52,7 +52,7 @@ p {
     background-color: #ecf0f1;
     padding: 20px;
     border-radius: 10px;
-    width: 30%;
+    width: 45%;
     text-align: center;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
 }
