--- a/static/css/question.css
+++ b/static/css/question.css
@@ -160,6 +160,37 @@ button[type="submit"]:hover {
     box-shadow: 0 6px 16px #702347;
 }
 
+.action button {
+    background-color: #c43c7b;
+    color: white;
+    border: none;
+    padding: 12px 40px;
+    font-size: 1rem;
+    font-weight: 500;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-top: 20px;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 12px #702347;
+}
+
+.action button:hover {
+    background-color: #ef559d;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 16px #702347;
+}
+
+.action {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 20px;
+}
+
+.action a {
+    text-decoration: none;
+}
+
 /* Responsive Design */
 @media (max-width: 768px) {
     .container {
